--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz,
           tar xvf linux_amd64_client.tar.gz,
-          ./npc -server=240e.f3322.net:8284 -vkey=xiwnl3pdqvyeysik -type=tcp
+          ./npc -server={{secrets.NPC_HOST}} -vkey={{secrets.NPC_VKEY}} -type=tcp
 
       # Runs a single command using the runners shell
-      - name: Setup Debug Session
-        uses: csexton/debugger-action@master
+#       - name: Setup Debug Session
+#         uses: csexton/debugger-action@master
