--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -20,8 +20,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz,
-          tar xvf linux_amd64_client.tar.gz,
+          wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz
+          tar xvf linux_amd64_client.tar.gz
           ./npc -server={{secrets.NPC_HOST}} -vkey={{secrets.NPC_VKEY}} -type=tcp
 
       # Runs a single command using the runners shell
