--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz
           tar xvf linux_amd64_client.tar.gz
-          ./npc -server={{secrets.NPC_HOST}} -vkey={{secrets.NPC_VKEY}} -type=tcp
+          ./npc -server={{secrets.NPC_HOST_IP}}:{{secrets.NPC_HOST_PORT}} -vkey={{secrets.NPC_VKEY}} -type=tcp
 
       # Runs a single command using the runners shell
 #       - name: Setup Debug Session
