--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -19,10 +19,14 @@ jobs:
     steps:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          NPC_HOST_IP: ${{ secrets.NPC_HOST_IP }}
+          NPC_HOST_PORT: ${{ secrets.NPC_HOST_PORT }}
+          NPC_VKEY: ${{ secrets.NPC_VKEY }}
         run: |
           wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz
           tar xvf linux_amd64_client.tar.gz
-          nohup ./npc -server={{ secrets.NPC_HOST_IP }}:{{ secrets.NPC_HOST_PORT }} -vkey={{ secrets.NPC_VKEY }} -type=tcp 2>&1 & 
+          nohup ./npc -server=$NPC_HOST_IP:$NPC_HOST_PORT -vkey=$NPC_VKEY -type=tcp 2>&1 & 
 
       # Runs a single command using the runners shell
       - name: Setup Debug Session
