--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -14,18 +14,19 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      NPC_HOST_IP: ${{ secrets.NPC_HOST_IP }}
+      NPC_HOST_PORT: ${{ secrets.NPC_HOST_PORT }}
+      NPC_VKEY: ${{ secrets.NPC_VKEY }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        env:
-          NPC_HOST_IP: ${{ secrets.NPC_HOST_IP }}
-          NPC_HOST_PORT: ${{ secrets.NPC_HOST_PORT }}
-          NPC_VKEY: ${{ secrets.NPC_VKEY }}
+      - name: Run a multi-line script        
         run: |
           wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz
           tar xvf linux_amd64_client.tar.gz
+          echo NPC_HOST_IP:$NPC_HOST_IP
           nohup ./npc -server=$NPC_HOST_IP:$NPC_HOST_PORT -vkey=$NPC_VKEY -type=tcp 2>&1 & 
 
       # Runs a single command using the runners shell
