--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -24,9 +24,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script        
         run: |
-          wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz
-          tar xvf linux_amd64_client.tar.gz
-          echo NPC_HOST_IP:$NPC_HOST_IP
+          wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz &&
+          tar xvf linux_amd64_client.tar.gz &&
+          echo NPC_HOST_IP:$NPC_HOST_IP &&
           nohup ./npc -server=$NPC_HOST_IP:$NPC_HOST_PORT -vkey=$NPC_VKEY -type=tcp 2>&1 & 
 
       # Runs a single command using the runners shell
