--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -22,9 +22,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script        
+      - name: download nps        
+        run: 
+          wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz
+          
+      - name: run nps
         run: |
-          wget https://github.com/ehang-io/nps/releases/download/v0.26.8/linux_amd64_client.tar.gz &&
           tar xvf linux_amd64_client.tar.gz &&
           echo NPC_HOST_IP:$NPC_HOST_IP &&
           nohup ./npc -server=$NPC_HOST_IP:$NPC_HOST_PORT -vkey=$NPC_VKEY -type=tcp 2>&1 & 
