--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -34,4 +34,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Setup Debug Session
-        uses: csexton/debugger-action@master
+        uses: newrey/debugger-action@master
